--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "",
   "main": "webpack.config.js",
   "dependencies": {
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.3",
     "tslint": "^5.10.0",
     "typescript": "^2.8.3",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3"
   },
   "devDependencies": {
+    "@types/bootstrap": "^4.1.0",
+    "@types/jquery": "^3.3.2",
     "clean-webpack-plugin": "^0.1.19",
     "html-webpack-plugin": "^3.2.0"
   },
