--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "jquery": "^3.3.1",
+    "normalize": "^0.3.1",
     "popper.js": "^1.14.3",
     "tslint": "^5.10.0",
     "typescript": "^2.8.3",
